--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,33 @@
 # Se complementa con docker-compose.local.yml o docker-compose.prod.yml
 # ============================================================
 services:
+  postgres:
+    image: postgres:16-alpine
+    container_name: postgres
+    environment:
+      POSTGRES_DB: litellm
+      POSTGRES_USER: litellm
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme_pg}
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U litellm"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
   litellm:
     image: litellm/litellm:latest
     container_name: litellm
     ports:
       - "4000:4000"
     environment:
-      - DATABASE_URL=sqlite:////data/litellm.db
+      - DATABASE_URL=postgresql://litellm:${POSTGRES_PASSWORD:-changeme_pg}@postgres:5432/litellm
     command: ["--config", "/app/config.yaml", "--port", "4000", "--num_workers", "1"]
+    depends_on:
+      postgres:
+        condition: service_healthy
     restart: unless-stopped
 
   open-webui:
@@ -26,6 +45,9 @@ services:
     depends_on:
       - litellm
     profiles: ["webui"]
+
+volumes:
+  postgres-data:
 
 networks:
   default:
