feat: add GPU-safe model switcher panel for Open WebUI

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -29,5 +29,7 @@ services:
         condition: service_healthy
 
   open-webui:
+    ports:
+      - "3000:8080"
     volumes:
       - ./data/openwebui:/app/backend/data
