feat: harden model switcher for single-vllm operation

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -41,6 +41,12 @@ services:
       - MODEL_SWITCHER_DEFAULT=${MODEL_SWITCHER_DEFAULT:-qwen-fast}
       - MODEL_SWITCHER_BIND=0.0.0.0
       - MODEL_SWITCHER_PORT=9000
+      - MODEL_SWITCHER_DOCKER_TIMEOUT_SECONDS=${MODEL_SWITCHER_DOCKER_TIMEOUT_SECONDS:-30}
+      - MODEL_SWITCHER_HEALTH_TIMEOUT_SECONDS=${MODEL_SWITCHER_HEALTH_TIMEOUT_SECONDS:-480}
+      - MODEL_SWITCHER_POLL_INTERVAL_SECONDS=${MODEL_SWITCHER_POLL_INTERVAL_SECONDS:-2}
+      - MODEL_SWITCHER_LITELLM_VERIFY_TIMEOUT_SECONDS=${MODEL_SWITCHER_LITELLM_VERIFY_TIMEOUT_SECONDS:-90}
+      - MODEL_SWITCHER_LITELLM_MODELS_URL=http://litellm:4000/v1/models
+      - MODEL_SWITCHER_LITELLM_KEY=${LITELLM_KEY:-cambiaLAclave}
       - DOCKER_PROXY_URL=http://docker-socket-proxy:2375
       - MODEL_CONFIG_DIR=/config
       - MODEL_TEMPLATE_DIR=/opt/model-configs
