--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -206,9 +206,12 @@ services:
     image: ${COMFYUI_IMAGE:-yanwk/comfyui-boot:cu126-slim}
     container_name: comfyui
     runtime: nvidia
+    gpus: all
     ports:
       - "127.0.0.1:8188:8188"
     environment:
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
       - HUGGINGFACE_HUB_CACHE=/data/hf-cache
       - HF_HOME=/data/hf-cache
     volumes:
