Fix missing ComfyRegistry data files

--- a/comfyui/manager-config.ini
+++ b/comfyui/manager-config.ini
@@ -1,2 +1,5 @@
 [default]
-security_level = medium
+security_level = normal
+network_mode = public
+model_download_by_agent = True
+file_logging = True
