Investigar fallo nodos ComfyUI Manag

--- a/comfyui/manager-config.ini
+++ b/comfyui/manager-config.ini
@@ -1,5 +1,5 @@
 [default]
-security_level = normal
+security_level = weak
 network_mode = public
 model_download_by_agent = True
 file_logging = True
